--- a/KeyCounts.html
+++ b/KeyCounts.html
@@ -15,6 +15,12 @@ test,badNumberFormat
 4.5.2.6.7
 bob,3,tooManyTokens
 tooFewTokens
+John, 33
+John, 34
+Jane, 1099
+Alex, 12
+Peter, 5566
+Alex, 55
 </textarea><br><br>
 <button onclick="keyCounts()">Calculate Key Counts</button>
 <div id="result"></div>
