--- a/KeyCounts.html
+++ b/KeyCounts.html
@@ -5,6 +5,8 @@
 <title>Key Counts</title>
 </head>
 <body>
+<p>Use the list below, add to it, or create your own list.
+</p>
 <textarea id="textarea" rows="10" cols="40" autofocus="autofocus" >
 John,2
 Jane,3
